# KoteGuard

./: .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _config.yml  constraints.txt  index.md  pyproject.toml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/scripts/: sync_android_skills.py  update_security_version.py
.github/workflows/: ci.yml  codeql.yml  release.yml  sync-android-skills.yml  update-security-version.yml
src/koteguard/: __init__.py  cli.py  config.py  launcher.py  models.py  planning.py  project_scanner.py  sensitive_files.py  templates.py  validation.py  worktree.py
src/koteguard/templates/: PLAN.md  WORKSPACE.md  config.toml  instructions.md  security.instructions.md
src/koteguard/templates/android-skills/: compose-migration.skill.md  edge-to-edge.skill.md
templates/: AGENTS.md  PLAN.md  TASK.md  WORKSPACE.md  instructions.md  security.instructions.md
templates/android-skills/: agp9.skill.md  android-cli.skill.md  navigation3.skill.md  perfetto-sql.skill.md
templates/ios-skills/: swift-concurrency.skill.md  swiftui-patterns.skill.md  xctest.skill.md
tests/: test_android_skills.py  test_cli.py  test_cli_deny_flags.py  test_cli_extended.py  test_cli_interactive.py  test_config.py  test_launcher.py  test_models.py  test_planning.py  test_project_scanner.py  test_sdd_spec.py  test_sensitive_files.py  test_session_structure.py  test_token_hygiene.py  test_validation.py  test_worktree.py
