[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koteguard"
version = "0.1.0"
description = "KoteGuard – run GitHub Copilot agents safely in isolated git worktrees"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["copilot", "android", "ios", "mobile", "git", "worktree"]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "pydantic>=2",
    "gitpython>=3",
    "questionary>=2",
    "tomli-w>=1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "pytest-cov>=5",
]

[project.scripts]
kote = "koteguard.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
