[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koteguard"
version = "1.0.0a4"
description = "KoteGuard – run GitHub Copilot agents safely in isolated git worktrees"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Alishen" }]
keywords = ["copilot", "android", "ios", "mobile", "git", "worktree"]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "pydantic>=2",
    "gitpython>=3",
    "questionary>=2",
    "tomli-w>=1",
    "pyyaml>=6",
]

[project.urls]
Homepage = "https://koteguard.com"
Repository = "https://github.com/alisen/KoteGuard"
"Bug Tracker" = "https://github.com/alisen/KoteGuard/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "pytest-cov>=5",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import order)
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common bugs)
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # do not perform function calls in default args (Typer uses this)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # unused imports in tests are fine

[project.scripts]
kote = "koteguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
koteguard = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
